[git] introduce loadTimedCommits method to replace the last usage of onlyHashesHistory